--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "dotenv": "8.1.0",
+    "react": "16.10.2",
+    "react-bingmaps": "^3.6.1",
+    "react-dom": "16.10.2",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "now-build": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
